[package]
name = "krait"
version = "0.0.1"
authors = ["miten <57693631+m1ten@users.noreply.github.com>"]
edition = "2021"
description = "cross platform package manager"
readme = "README.md"
repository = "https://github.com/m1ten/krait"
license = "Apache-2.0"
publish = false

[lib]
name = "krait"
path = "src/lib/mod.rs"

[dependencies]
clap = "3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indexmap = "1.9"
which = "4.2"
dirs = "4.0"
tokio = { version = "1.20", features = ["full"] }
online = "3.0"
mlua = { version = "0.8", features = ["luau", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bat = "0.21"
smart-default = "0.6"
regex = "1.6"
futures = "0.3"
console = "0.15"
indicatif = "0.17"

[target.'cfg(unix)'.dependencies]
nix = "0.24"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true