[package]
name = "krait"
version = "0.0.1"
authors = ["miten <57693631+m1ten@users.noreply.github.com>"]
edition = "2021"
description = "cross platform package manager"
readme = "README.md"
repository = "https://github.com/m1ten/krait"
license = "Apache-2.0"
publish = false

[lib]
name = "krait"
path = "src/lib/mod.rs"

[dependencies]
clap = "3.2.23"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
git2 = "0.15.0"
indexmap = "1.9.2"
which = "4.3.0"
dirs = "4.0.0"
tokio = { version = "1.21.1", features = ["full"] }
online = "4.0.0"
mlua = { version = "0.8.7", features = ["luau", "serialize"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.91"
bat = "0.22.1"
smart-default = "0.6.0"
regex = "1.7.0"
futures = "0.3.25"
console = "0.15.2"
indicatif = "0.17.2"
sha1 = "0.10.5"
crossterm = "0.25.0"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true