[package]
name = "wix-mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "wix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
tokio = "1.14.0"
reqwest = { version = "0.11.6", features = ["blocking"] }